- login layout ok

--- a/CvHub/CvHub.csproj
+++ b/CvHub/CvHub.csproj
@@ -16,4 +16,12 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\User\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\css\socialMedia.css" />
+  </ItemGroup>
+
 </Project>
