--- a/CvHub/CvHub.csproj
+++ b/CvHub/CvHub.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\template\img\" />
+  </ItemGroup>
+
 </Project>
