--- a/CvHub/appsettings.json
+++ b/CvHub/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CvHub;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=DESKTOP-HCTPIL6\\SQLEXPRESS01;Database=CVHub;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
