--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/CvHub/Migrations/20210525163715_initialCreae.cs
+/CvHub/Migrations/20210525163715_initialCreae.Designer.cs
